--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <meta name="description" content="Мой опыт переезда: как быстро оформить виртуальную дебетовую карту онлайн, чем платить за границей и как снизить комиссии. ТОП-8 сервисов, советы по выбору и безопасности." />
   <meta name="robots" content="index, follow" />
 
-<link rel="canonical" href="https://luchshie-virtualniye-debetovie-karti.github.io/" />
+  <link rel="canonical" href="https://luchshie-virtualniye-debetovie-karti.github.io/" />
 
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=1" />
+  <!-- Если правки не видны из-за кэша — увеличь v=2 -> v=3 -->
+  <link rel="stylesheet" href="assets/css/styles.css?v=3" />
 </head>
 
 <body>
@@ -28,9 +29,7 @@
   <section class="hero" id="top">
     <div class="container">
       <h1>Оформить виртуальную дебетовую карту моментально: мой опыт и выгоды зарубежных платежей</h1>
-      <p class="subtitle">
-        Формат статьи: сервисы для зарубежных оплат, комиссии, безопасность и практичные советы.
-      </p>
+      <!-- Подзаголовок убран по просьбе клиента -->
     </div>
   </section>
 
@@ -65,7 +64,10 @@
       <h2>Разовый платёж без выпуска карты: ReMoney</h2>
       <p>
         Если выпускать виртуальную карту не хочется, а нужно просто закинуть деньги на чужой баланс — выручит сервис ReMoney.
-        Через <a href="https://remoney.ru" target="_blank" rel="noopener">remoney.ru</a> вы вводите рубли (СБП, карта РФ, крипта),
+        Через
+        <!-- href = редирект из ТЗ, текст = remoney.ru -->
+        <a href="REPLACE_WITH_REDIRECT_REMONEY" target="_blank" rel="noopener">remoney.ru</a>
+        вы вводите рубли (СБП, карта РФ, крипта),
         выбираете нужный сервис (Spotify, Netflix, Apple ID, PayPal, Steam и т.д.), а платёж уходит напрямую в валюте без регистрации карт;
         комиссия фиксированная, заявки закрывают за 5–10 минут. Удобно, когда нужна разовая подписка зарубежного аккаунта, а лишние карты плодить не хочется.
       </p>
@@ -75,7 +77,10 @@
       <section class="service">
         <h3>1) Плати по миру (PlatiPoMiru)</h3>
         <p>PlatiPoMiru — сервис моментального выпуска виртуальных долларовых карт через Telegram-бот; оформление занимает около минуты и доступно из любого региона.</p>
-        <p>Ссылка: <a href="https://platipomiru.com" target="_blank" rel="noopener">platipomiru.com</a></p>
+        <p>
+          Ссылка:
+          <a href="https://virtualcards.su/Hz4VDI" target="_blank" rel="noopener">platipomiru.com</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Пополнение рублями через СБП с конвертацией в USD.</li>
@@ -93,7 +98,10 @@
       <section class="service">
         <h3>2) WantToPay</h3>
         <p>WantToPay подойдёт, если нужно открыть виртуальную карту быстро и без лишних формальностей. Оформление обычно занимает 5–10 минут.</p>
-        <p>Ссылка: <a href="https://wanttopay.net" target="_blank" rel="noopener">wanttopay.net</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_WANTTOPAY" target="_blank" rel="noopener">wanttopay.net</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Интуитивный интерфейс.</li>
@@ -110,7 +118,10 @@
       <section class="service">
         <h3>3) XCards</h3>
         <p>XCards — платформа, где после одобрения заявки можно быстро получить реквизиты виртуальной дебетовой карты.</p>
-        <p>Ссылка: <a href="https://xcards.net" target="_blank" rel="noopener">xcards.net</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_XCARDS" target="_blank" rel="noopener">xcards.net</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Мультивалютные операции.</li>
@@ -127,7 +138,10 @@
       <section class="service">
         <h3>4) EPN</h3>
         <p>EPN — сервис, где можно получать кэшбэк при покупках на зарубежных площадках (при соблюдении условий). Обычно требуется привязка/выпуск карты.</p>
-        <p>Ссылка: <a href="https://epn.net" target="_blank" rel="noopener">epn.net</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_EPN" target="_blank" rel="noopener">epn.net</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Кэшбэк у партнёров.</li>
@@ -144,7 +158,10 @@
       <section class="service">
         <h3>5) PST.NET</h3>
         <p>PST.NET специализируется на международных расчётах и может подойти для оплат в долларах/евро (смотрите тарифы и ограничения).</p>
-        <p>Ссылка: <a href="https://pst.net" target="_blank" rel="noopener">pst.net</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_PST" target="_blank" rel="noopener">pst.net</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Мультивалютные счета.</li>
@@ -161,7 +178,10 @@
       <section class="service">
         <h3>6) FlexCard</h3>
         <p>FlexCard — сервис виртуальных карт с быстрым выпуском и управлением в кабинете.</p>
-        <p>Ссылка: <a href="https://flexcard.cards" target="_blank" rel="noopener">flexcard.cards</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_FLEXCARD" target="_blank" rel="noopener">flexcard.cards</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Мгновенный выпуск.</li>
@@ -178,7 +198,10 @@
       <section class="service">
         <h3>7) Capitalist</h3>
         <p>Capitalist подходит для операций с валютой и выпуском карт под разные задачи (условия зависят от тарифа).</p>
-        <p>Ссылка: <a href="https://capitalist.net" target="_blank" rel="noopener">capitalist.net</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_CAPITALIST" target="_blank" rel="noopener">capitalist.net</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Несколько валютных счетов.</li>
@@ -195,7 +218,10 @@
       <section class="service">
         <h3>8) Volet</h3>
         <p>Volet позволяет выпустить виртуальную карту и платить онлайн/бесконтактно (проверьте поддержку Pay-кошельков и стран).</p>
-        <p>Ссылка: <a href="https://volet.com" target="_blank" rel="noopener">volet.com</a></p>
+        <p>
+          Ссылка:
+          <a href="REPLACE_WITH_REDIRECT_VOLET" target="_blank" rel="noopener">volet.com</a>
+        </p>
         <h4>Особенности</h4>
         <ul>
           <li>Apple Pay / Google Pay (если поддерживается).</li>
@@ -270,4 +296,3 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
-
