--- a/index.html
+++ b/index.html
@@ -6,28 +6,21 @@
 
   <!-- SEO минимум -->
   <title>Оформить виртуальную дебетовую карту моментально: мой опыт и выгоды зарубежных платежей</title>
-  <meta name="description" content="Как оформить виртуальную дебетовую карту моментально для зарубежных оплат: обзор 8 сервисов, советы по выбору, комиссиям и безопасности." />
+  <meta name="description" content="Личный опыт: как быстро оформить виртуальную дебетовую карту онлайн для зарубежных оплат. ТОП-8 сервисов, советы по выбору, комиссиям и безопасности." />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://luchshie-virtualniye-debetovie-karti.github.io/" />
 
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
   <link rel="stylesheet" href="assets/css/styles.css?v=1" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKX2DEH8BR"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-JKX2DEH8BR');
-  </script>
+  <!-- Если нужно: вставьте GA4/Метрику сюда, перед </head> -->
 </head>
 
 <body>
   <header class="topbar">
     <div class="container topbar__row">
       <a class="brand" href="#top" aria-label="На главную">
-        <img class="brand__logo" src="assets/img/logo.svg" alt="Логотип" />
+        <span class="brand__dot" aria-hidden="true"></span>
         <span class="brand__text">Виртуальные дебетовые карты</span>
       </a>
     </div>
@@ -36,13 +29,14 @@
   <section class="hero" id="top">
     <div class="container">
       <h1>Оформить виртуальную дебетовую карту моментально: мой опыт и выгоды зарубежных платежей</h1>
+      <!-- Подзаголовок удалён (как просили ранее) -->
     </div>
   </section>
 
   <main class="container layout" id="content">
     <article class="article" aria-label="Статья">
 
-      <!-- Мобильное оглавление (только сверху) -->
+      <!-- Оглавление на мобилке (только сверху) -->
       <section class="toc toc--mobile" aria-label="Оглавление">
         <button class="toc__toggle" type="button" id="tocToggle" aria-expanded="false">
           Оглавление
@@ -51,8 +45,6 @@
           <nav id="tocNavMobile"></nav>
         </div>
       </section>
-
-      <!-- ===================== ARTICLE START ===================== -->
 
       <p>
         Недавно я переехал в другую страну и столкнулся с неожиданной проблемой: оплата покупок и перевод денег оказались вовсе не такой простой задачей.
@@ -71,11 +63,9 @@
       <h2>Разовый платёж без выпуска карты: ReMoney</h2>
       <p>
         Если выпускать виртуальную карту не хочется, а нужно просто закинуть деньги на чужой баланс — выручит сервис ReMoney.
-        Через
-        <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">remoney.ru</a>
-        вы вводите рубли (СБП, карта РФ, крипта), выбираете нужный сервис - Spotify, Netflix, Apple ID, PayPal, Steam и т.д.,
-        а платёж уходит напрямую в валюте без регистрации карт; комиссия фиксированная, заявки закрывают за 5-10 минут.
-        Удобно, когда нужна разовая подписка зарубежного аккаунта, а лишние карты плодить не хочется.
+        Через <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">remoney.ru</a> вы вводите рубли (СБП, карта РФ, крипта),
+        выбираете нужный сервис - Spotify, Netflix, Apple ID, PayPal, Steam и т.д., а платёж уходит напрямую в валюте без регистрации карт;
+        комиссия фиксированная, заявки закрывают за 5-10 минут. Удобно, когда нужна разовая подписка зарубежного аккаунта, а лишние карты плодить не хочется.
       </p>
 
       <h2>ТОП-8 сервисов для моментального оформления виртуальной дебетовой карты</h2>
@@ -83,8 +73,7 @@
       <section class="service">
         <h3>Плати по миру</h3>
         <p>
-          PlatiPoMiru — лёгкий в использовании сервис моментального выпуска виртуальных долларовых карт через Telegram-бот;
-          оформление занимает около минуты и доступно из любого региона.
+          PlatiPoMiru — лёгкий в использовании сервис моментального выпуска виртуальных долларовых карт через Telegram-бот; оформление занимает около минуты и доступно из любого региона.
         </p>
         <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">platipomiru.com</a></p>
 
@@ -118,9 +107,7 @@
         </ul>
 
         <h4>Ключевые выгоды:</h4>
-        <p>
-          Возможность открывать несколько карт под разные задачи, прозрачные комиссии, поддержка перевода рублёвого остатка в доллары и евро.
-        </p>
+        <p>Возможность открывать несколько карт под разные задачи, прозрачные комиссии, поддержка перевода рублёвого остатка в доллары и евро.</p>
       </section>
 
       <section class="service">
@@ -139,10 +126,7 @@
         </ul>
 
         <h4>Ключевые выгоды:</h4>
-        <p>
-          Карта виртуальная бесплатно выпускается на стартовом тарифе, мгновенный выпуск онлайн без визита в банковский офис,
-          расчёт в любой популярной валюте.
-        </p>
+        <p>Карта виртуальная бесплатно выпускается на стартовом тарифе, мгновенный выпуск онлайн без визита в банковский офис, расчёт в любой популярной валюте.</p>
       </section>
 
       <section class="service">
@@ -161,9 +145,7 @@
         </ul>
 
         <h4>Ключевые выгоды:</h4>
-        <p>
-          Экономия на покупках, бесплатное обслуживание в ряде случаев, удобная система уведомлений.
-        </p>
+        <p>Экономия на покупках, бесплатное обслуживание в ряде случаев, удобная система уведомлений.</p>
       </section>
 
       <section class="service">
@@ -201,17 +183,14 @@
         </ul>
 
         <h4>Ключевые выгоды:</h4>
-        <p>
-          Бесплатная виртуальная карта в базовом тарифе (при определённом обороте),
-          удобный сервис переводов, мгновенный выпуск.
-        </p>
+        <p>Бесплатная виртуальная карта в базовом тарифе (при определённом обороте), удобный сервис переводов, мгновенный выпуск.</p>
       </section>
 
       <section class="service">
         <h3>Capitalist</h3>
         <p>
-          Capitalist — популярный сервис, ориентированный на тех, кто хочет открыть виртуальную дебетовую карту онлайн моментально
-          и выполнять операции с разными валютами. Здесь удобно хранить остаток в долларах или евро, что важно, если вы живёте за границей.
+          Capitalist — популярный сервис, ориентированный на тех, кто хочет открыть виртуальную дебетовую карту онлайн моментально и выполнять операции с разными валютами.
+          Здесь удобно хранить остаток в долларах или евро, что важно, если вы живёте за границей.
         </p>
         <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">capitalist.net</a></p>
 
@@ -223,17 +202,14 @@
         </ul>
 
         <h4>Ключевые выгоды:</h4>
-        <p>
-          Мгновенная виртуальная карта, удобная конвертация валют,
-          возможность снимать деньги в банкоматах (при необходимости заказа пластика).
-        </p>
+        <p>Мгновенная виртуальная карта, удобная конвертация валют, возможность снимать деньги в банкоматах (при необходимости заказа пластика).</p>
       </section>
 
       <section class="service">
         <h3>Volet</h3>
         <p>
-          Volet позволяет выпустить виртуальную Visa / Mastercard за пару минут и сразу расплачиваться в интернете или через бесконтакт —
-          пластик заказывать не обязательно. Карту мгновенно «кормят» деньгами из кошелька Volet без конвертационных сюрпризов.
+          Volet позволяет выпустить виртуальную Visa / Mastercard за пару минут и сразу расплачиваться в интернете или через бесконтакт — пластик заказывать не обязательно.
+          Карту мгновенно «кормят» деньгами из кошелька Volet без конвертационных сюрпризов.
         </p>
         <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">volet.com</a></p>
 
@@ -254,66 +230,36 @@
       <h2>Для выбора виртуальной карты обратите внимание на:</h2>
 
       <h3>Мультивалютность</h3>
-      <p>
-        Если вы живёте или работаете за границей, зарубежная виртуальная карта банка с поддержкой нескольких валют (доллары, евро)
-        поможет экономить на комиссиях и конвертации.
-      </p>
+      <p>Если вы живёте или работаете за границей, зарубежная виртуальная карта банка с поддержкой нескольких валют (доллары, евро) поможет экономить на комиссиях и конвертации.</p>
 
       <h3>Уровень безопасности</h3>
-      <p>
-        Любая виртуальная дебетовая карта без посещения банка должна иметь двухфакторную аутентификацию и мгновенную блокировку через личный кабинет.
-        Обращайте внимание на репутацию и опыт компании.
-      </p>
+      <p>Любая виртуальная дебетовая карта без посещения банка должна иметь двухфакторную аутентификацию и мгновенную блокировку через личный кабинет. Обращайте внимание на репутацию и опыт компании.</p>
 
       <h3>Комиссии и лимиты</h3>
-      <p>
-        Когда будете открывать онлайн карту, смотрите не только на стоимость выпуска, но и на проценты за переводы, снятие наличных в банкомате, конвертацию.
-        Иногда бесплатная карта онлайн оказывается дорогостоящей при активном использовании.
-      </p>
+      <p>Когда будете открывать онлайн карту, смотрите не только на стоимость выпуска, но и на проценты за переводы, снятие наличных в банкомате, конвертацию. Иногда бесплатная карта онлайн оказывается дорогостоящей при активном использовании.</p>
 
       <h3>Интеграция и функционал</h3>
-      <p>
-        Важно, чтобы карты банковские виртуальные бесплатно поддерживали привязку к электронным кошелькам, например PayPal, если вы делаете покупки за рубежом.
-        Или возможность переводить деньги на российский счёт, если получаете доход на родине.
-      </p>
+      <p>Важно, чтобы карты банковские виртуальные бесплатно поддерживали привязку к электронным кошелькам, например PayPal, если вы делаете покупки за рубежом. Или возможность переводить деньги на российский счёт, если получаете доход на родине.</p>
 
       <h3>Возможность расширения</h3>
-      <p>
-        При планировании крупных покупок уточняйте лимит на оплату за границей. Часто в начальном тарифе он низкий, но повышается после прохождения KYC (верификации).
-      </p>
+      <p>При планировании крупных покупок уточняйте лимит на оплату за границей. Часто в начальном тарифе он низкий, но повышается после прохождения KYC (верификации).</p>
 
       <h2>Дополнительно мои лайфхаки:</h2>
 
       <h3>Используйте несколько виртуальных карт</h3>
-      <p>
-        Если боитесь перепутать разные расходы, заведите одну карту для оплаты подписок, другую — для перевода больших сумм,
-        третью — для повседневных мелких трат.
-      </p>
+      <p>Если боитесь перепутать разные расходы, заведите одну карту для оплаты подписок, другую — для перевода больших сумм, третью — для повседневных мелких трат.</p>
 
       <h3>Следите за кэшбэком</h3>
-      <p>
-        Многие сервисы предлагают возврат процентов от покупок в заграничных магазинах. Если любите онлайн-шопинг, это поможет сэкономить,
-        особенно при частых заказах за рубежом.
-      </p>
+      <p>Многие сервисы предлагают возврат процентов от покупок в заграничных магазинах. Если любите онлайн-шопинг, это поможет сэкономить, особенно при частых заказах за рубежом.</p>
 
       <h3>Проверяйте обменные курсы</h3>
-      <p>
-        Некоторые платформы позволяют открывать онлайн карту бесплатно, но при этом устанавливают не самый выгодный курс конвертации.
-        Сравните несколько сервисов, чтобы найти оптимальный для вас способ расплачиваться валютой.
-      </p>
+      <p>Некоторые платформы позволяют открывать онлайн карту бесплатно, но при этом устанавливают не самый выгодный курс конвертации. Сравните несколько сервисов, чтобы найти оптимальный для вас способ расплачиваться валютой.</p>
 
       <h3>Планируйте верификацию заранее</h3>
-      <p>
-        Чтобы повысить лимит или снимать крупные суммы, вы обязаны подтвердить личность (подгрузить копии документов).
-        Лучше сделать это сразу после регистрации, чтобы не заморачиваться в срочной ситуации, когда деньги понадобятся «здесь и сейчас».
-      </p>
+      <p>Чтобы повысить лимит или снимать крупные суммы, вы обязаны подтвердить личность (подгрузить копии документов). Лучше сделать это сразу после регистрации, чтобы не заморачиваться в срочной ситуации, когда деньги понадобятся «здесь и сейчас».</p>
 
       <h3>Изучайте локальные платёжные системы</h3>
-      <p>
-        Если вы находитесь в стране, где Google Pay и Apple Pay пока работают, виртуальная карта для оплаты может быть привязана к смартфону.
-        Но учтите, что российские карты зачастую отключены от этих сервисов. Возможно, стоит оформить иностранную карту (через зарубежный сервис),
-        чтобы оплачивать бесконтактно.
-      </p>
+      <p>Если вы находитесь в стране, где Google Pay и Apple Pay пока работают, виртуальная карта для оплаты может быть привязана к смартфону. Но учтите, что российские карты зачастую отключены от этих сервисов. Возможно, стоит оформить иностранную карту (через зарубежный сервис), чтобы оплачивать бесконтактно.</p>
 
       <h2>Заключение</h2>
       <p>
@@ -329,11 +275,9 @@
         Выбирайте то, что ближе вашим потребностям, и помните: виртуальная карта онлайн моментально — это реальность, которая упрощает жизнь за рубежом,
         помогает безопасно расплачиваться и экономит деньги на конвертации. Удачи в освоении новых финансовых инструментов!
       </p>
-
-      <!-- ===================== ARTICLE END ===================== -->
-
     </article>
 
+    <!-- Оглавление справа (только на десктопе) -->
     <aside class="sidebar" aria-label="Оглавление">
       <div class="widget">
         <div class="widget__title">Оглавление</div>
@@ -341,7 +285,29 @@
       </div>
     </aside>
   </main>
+<!-- Yandex.Metrika counter -->
 
+<script type="text/javascript">
+
+    (function(m,e,t,r,i,k,a){
+
+        m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+
+        m[i].l=1*new Date();
+
+        for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+
+        k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=106058122', 'ym');
+
+    ym(106058122, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+
+</script>
+
+<noscript><div><img src="https://mc.yandex.ru/watch/106058122" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+
+<!-- /Yandex.Metrika counter -->
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
