--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
   <link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
   <link rel="stylesheet" href="assets/css/styles.css?v=1" />
 
-  <!-- Если нужно: вставьте GA4/Метрику сюда, перед </head> -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JKX2DEH8BR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JKX2DEH8BR');
+</script>
 </head>
 
 <body>
@@ -29,7 +37,6 @@
   <section class="hero" id="top">
     <div class="container">
       <h1>Оформить виртуальную дебетовую карту моментально: мой опыт и выгоды зарубежных платежей</h1>
-      <!-- Подзаголовок удалён (как просили ранее) -->
     </div>
   </section>
 
@@ -311,3 +318,4 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
