--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Разовый платёж без выпуска карты: ReMoney</h2>
       <p>
         Если выпускать виртуальную карту не хочется, а нужно просто закинуть деньги на чужой баланс — выручит сервис ReMoney.
-        Через <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">remoney.ru</a> вы вводите рубли (СБП, карта РФ, крипта),
+        Через <a href="https://virtualcards.su/cLjLnj" target="_blank" rel="noopener">remoney.ru</a> вы вводите рубли (СБП, карта РФ, крипта),
         выбираете нужный сервис - Spotify, Netflix, Apple ID, PayPal, Steam и т.д., а платёж уходит напрямую в валюте без регистрации карт;
         комиссия фиксированная, заявки закрывают за 5-10 минут. Удобно, когда нужна разовая подписка зарубежного аккаунта, а лишние карты плодить не хочется.
       </p>
@@ -82,7 +82,7 @@
         <p>
           PlatiPoMiru — лёгкий в использовании сервис моментального выпуска виртуальных долларовых карт через Telegram-бот; оформление занимает около минуты и доступно из любого региона.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">platipomiru.com</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/Hz4VDl" target="_blank" rel="noopener">platipomiru.com</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -104,7 +104,7 @@
           WantToPay идеально подойдёт, если вы спрашиваете себя, где можно открыть виртуальную карту быстро и без лишних формальностей.
           Здесь действует упрощённая процедура KYC, а оформить виртуальную дебетовую карту онлайн без посещения банка можно за 5–10 минут.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">wanttopay.net</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/1nYziq" target="_blank" rel="noopener">wanttopay.net</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -123,7 +123,7 @@
           XCards — платформа, где можно оформить виртуальную карту дебетовую с бесплатным обслуживанием (при соблюдении некоторых условий).
           Создать виртуальную карту банка здесь несложно: нужна заявка, после одобрения вы моментально получаете реквизиты.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">xcards.net</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/vnNiuL" target="_blank" rel="noopener">xcards.net</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -142,7 +142,7 @@
           EPN — популярный в интернете сервис, где основная фишка — возвращать часть потраченных средств с покупок на иностранной площадке.
           Чтобы всё работало, нужно оформить виртуальную карту банка онлайн и подключить кэшбэк.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">epn.net</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/jjRKfd" target="_blank" rel="noopener">epn.net</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -161,7 +161,7 @@
           PST.NET даёт возможность получить виртуальную карту банка без посещения офиса, причём сервис специализируется на международных переводах.
           Если вы ищете, в каком банке можно открыть виртуальную карту для расчётов в долларах или евро, присмотритесь к PST.NET.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">pst.net</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/wmLNyQ" target="_blank" rel="noopener">pst.net</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -180,7 +180,7 @@
           FlexCard — это онлайн сервис виртуальных карт, где можно открыть цифровую карту виртуальную буквально одним кликом.
           Для меня стало открытием, что здесь можно оформить виртуальную дебетовую карту онлайн без визита в банк.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">flexcard.cards</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/ivVUdW" target="_blank" rel="noopener">flexcard.cards</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -199,7 +199,7 @@
           Capitalist — популярный сервис, ориентированный на тех, кто хочет открыть виртуальную дебетовую карту онлайн моментально и выполнять операции с разными валютами.
           Здесь удобно хранить остаток в долларах или евро, что важно, если вы живёте за границей.
         </p>
-        <p>Ссылка: <a href="https://virtualcards.su/hRJdIU" target="_blank" rel="noopener">capitalist.net</a></p>
+        <p>Ссылка: <a href="https://virtualcards.su/wWjctA" target="_blank" rel="noopener">capitalist.net</a></p>
 
         <h4>Особенности:</h4>
         <ul>
@@ -318,4 +318,5 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
