--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section class="hero" id="top">
     <div class="container">
-      <h1>Оформить виртуальную дебетовую карту моментально: мой опыт и выгоды зарубежных платежей</h1>
+      <h1>Как оформить виртуальную дебетовую карту моментально и использовать её для зарубежных платежей: личный опыт</h1>
     </div>
   </section>
 
@@ -318,5 +318,6 @@
   <script src="assets/js/main.js" defer></script>
 </body>
 </html>
+
 
 
